squash some safari/IE bugs with svgs

--- a/sass/_food-item.scss
+++ b/sass/_food-item.scss
@@ -15,7 +15,7 @@ $top_pick_picture_width_tablet: 260px;
 			dd {
 			    margin-left: 41px;
 			    line-height: 1.3em;
-			    padding-top:10px;
+			    padding-top:8px;
 			}
 		}
 	}
